# home-ops

./: .gitignore  .mise.toml  .sops.yaml  Taskfile.yaml  pyproject.toml
.taskfiles/network/: Taskfile.yaml
network/ansible/: requirements.yml
network/ansible/inventory/: hosts.ini
network/ansible/inventory/group_vars/: all.yml  dns.yml  leases.yml  mikrotik.sops.yml  mikrotik.yml  networks.yml  secrets.sops.yml  secrets.yml
network/ansible/inventory/group_vars/mikrotik/: dns.yml  leases.yml  networks.yml
network/ansible/inventory/host_vars/: crs310.yml  crs328.yml  css318.yml  rb5009.yml  router.yml  switch3.yml
network/ansible/playbooks/: configure.yml
network/clab/: containers.conf  test.yaml  topology.yaml
network/clab/clab-mikrotik-lab/: ansible-inventory.yml  nornir-simple-inventory.yml  topology-data.json
network/clab/clab-mikrotik-lab/.tls/ca/: ca.pem
network/clab/clab-test-lab/: ansible-inventory.yml  nornir-simple-inventory.yml  topology-data.json
network/clab/clab-test-lab/.tls/ca/: ca.pem
network/mikrotik/crs328/: 01-bridge.rsc  02-vlans.rsc
network/mikrotik/rb5009/: 01-bridge.rsc  02-vlans.rsc  03-ip-addressing.rsc  04-dhcp.rsc  05-firewall.rsc  06-static-leases.rsc
scripts/: mikrotik-bootstrap.sh  mikrotik-recover.sh
