[project]
name = "home-ops"
version = "0.1.0"
description = "Home Operations Infrastructure"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
ansible = [
    "ansible>=11.2.0",
    "ansible-pylibssh>=1.3.0",
    "paramiko>=4.0.0",
    "mikrotik-swos>=0.1.2",
    "librouteros>=3.2.1",
]
